# quinta

./: .gitignore  Cargo.toml  LICENSE  Makefile  PUZZLE_FETCHER.md  README.md  claude.md  fetch_puzzles.sh
.cargo/: config.toml
src/: generator.rs  import_puzzles.rs  import_words.rs  main.rs  models.rs
static/: game.js  index.html
