[package]
name = "quinta"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quinta"
path = "src/main.rs"

[[bin]]
name = "import_puzzles"
path = "src/import_puzzles.rs"

[[bin]]
name = "import_words"
path = "src/import_words.rs"

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rand = "0.8"
